# Takk

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
scripts/: bump-version.js
src/: App.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  project.rs  types.rs  updater.rs  worker.rs
src/components/: ConfigGeneralInfo.svelte  ConfigMapping.svelte  ConfigNormalization.svelte  ConfirmModal.svelte  ConsoleBar.svelte  PreviewModal.svelte  SaveProjectModal.svelte  SidebarLeft.svelte  SidebarMiddle.svelte
src/components/icons/: CsvIcon.svelte  ExcelIcon.svelte  HungTayGaLogo.svelte
src/components/ui/: DatePicker.svelte  Select.svelte  Toast.svelte
src/lib/: state.svelte.js
src/styles/: app.css
