[package]
name = "takk"
version = "0.4.9"
description = "Takk - Price List Processor"
authors = ["you"]
edition = "2021"

[lib]
name = "takk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
postcard = { version = "1", features = ["use-std"] }
zstd = { version = "0.13", default-features = false }
bincode = "1.3"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
calamine = { version = "0.24", default-features = false }
csv = "1.3"
anyhow = { version = "1.0", default-features = false, features = ["std"] }
encoding_rs = "0.8"
tokio = { version = "1", default-features = false, features = ["sync", "macros", "rt", "time"] }
reqwest = { version = "0.12", features = ["json"] }
blake3 = "1.5"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
